--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -96,12 +96,13 @@ img {display:block; margin:auto; width:50%;} .row:after, row:before {content:"";
   </div>
 
 <div class="topnav" style="text-transform:uppercase; background:#167EFB; z-index:1; width:100%; overflow:hidden; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16)">
-  <a href="../Index.html" class="hov hide-s">Home</a>
+  <div style="max-width:1300px; margin:auto">
+	<a href="../Index.html" class="hov hide-s">Home</a>
   <a href="../pcso-lotto-and-games.html" class="hov hide-s" style="color:#ffffff; border-bottom:3px solid white;">PCSO Lotto & Games</a>
   <a href="../results-and-winnings.html" class="hov hide-s">Results & Winnings</a>
   <a href="#" class="hov hide-s">FAQs</a>
 </div>
-
+</div>
 <div class="topnav" style="background:#ffffff; z-index:1; width:100%; overflow:hidden; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)">
   <a href="index.html" class="hide-m hide-l" style="font-size:20px; color:#626567; margin-left:5px;"><b>Lotto Info Philippines</b></a>
   <a href="javascript:void(0)" class="hide-l hide-m" style="font-size:22px; margin-right:10px; color:#626567; text-decoration:none; float:right;" onclick="openNav()">&#9776;</a>
