--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -79,7 +79,7 @@
 
 <style>
 * {box-sizing: border-box;} body {margin:0;} p, a, li, table {font-family:Arial;} @font-face {font-family:mFont; src: url(../Lotto-Info.woff);} h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:mFont;}
-h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, li{font-size:16px; line-height:1.5; letter-spacing:.2px} .ftext{font-size:28px} .text-m{font-size:15px} .text-l {font-size:18px}
+h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, li{font-size:17px; line-height:1.5; letter-spacing:.2px} .ftext{font-size:28px} .text-m{font-size:15px} .text-l {font-size:18px}
 .show {display:block!important} @media (max-width:600px){.hide-s{display:none!important}} @media (max-width:992px) and (min-width:601px){.hide-m{display:none!important}} @media (min-width:993px){.hide-l{display:none!important}}
 .topnav a {float:left; display:block; color:#ECEEF1; padding:11px; text-decoration:none; vertical-align:middle;} .yf, p, li, table {color:#404040;} .hov:hover {border-bottom:3px solid white;} .hide{display:none!important;}
 .topnav {overflow:hidden; background-color:#F2f2f2;} .side {float:left; width:100%; padding:16px;} .main { padding: 16px; float:left; width:100%} .navi {float:left; width:100%; display:block; padding:8px 16px; text-align:left; border:none; outline:none; text-decoration:none;}
@@ -98,7 +98,7 @@ img {display:block; margin:auto; width:50%;} .row:after, row:before {content:"";
 	<div style="max-width:1175px; margin:auto">
   <a href="../Index.html" class="hov hide-s">Home</a>
   <a href="../pcso-lotto-and-games.html" class="hov hide-s" style="color:#ffffff; border-bottom:3px solid white;">PCSO Lotto & Games</a>
-  <a href="../results-and-winnings.html" class="hide-s">Results & Winnings</a>
+  <a href="../results-and-winnings.html" class="hov hide-s">Results & Winnings</a>
   <a href="#" class="hov hide-s">FAQs</a>
 </div>
 </div>
