--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<title>PCSO Lotto and Games - Lotto Info Philippines</title>
+<title>Lotto Info Philippines</title>
 
  
  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -73,125 +73,9 @@ function closeNav() {
    	<p>A web-based portal that provides a single source of comprehensive, accurate and up-to-date information on all Philippines' lottery related matters; LOTTO RESULTS, HOW TO PLAY, HOW TO CLAIM PRIZES etc.</p>
    	<p>Our team is dedicated in bringing our readers the best information, delivering goodnews of all your favourite lotto games.</p>
    	</div>
-   	<div class="row" style="background:#2d89ef">
-    <br>
-    <div class="row">
-    <div class="three">
-    <a href="pcso-lotto-and-games/Ultra-lotto-6-58.html">
-    <div class="pichov" style="position: relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/6-58.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>Ultra Lotto 6/58</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    <div class="three">
-    <a href="pcso-lotto-and-games/Grand-lotto-6-55.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px;">
-    <br>
-    <br>
-    <img src="images/6-55.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>Grand Lotto 6/55</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    <div class="three">
-    <a href="pcso-lotto-and-games/Super-lotto-6-49.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/6-49.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>Super Lotto 6/49</strong></h2>
-    </div>
-    </div></a>
-    </div> 
-    </div>
-    <div class="row">
-    <div class="three">
-    <a href="pcso-lotto-and-games/Mega-Lotto-6-45.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/6-45.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>Mega Lotto 6/45</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    <div class="three">
-    <a href="pcso-lotto-and-games/lotto-6-42.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/6-42.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>Lotto 6/42</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    <div class="three">
-    <a href="pcso-lotto-and-games/EZ-2.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/ez2-lotto.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>EZ 2 Lotto</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    </div>
-    <div class="row">
-    <div class="three">
-    <a href="pcso-lotto-and-games/Swertres.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/pcsoswertres.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>Swertres Lotto</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    <div class="three">
-    <a href="pcso-lotto-and-games/4-Digit-Game.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/4digit.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>4-Digit Lotto</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    <div class="three">
-    <a href="pcso-lotto-and-games/6-Digit-Game.html" >
-    <div class="pichov" style="position:relative; background:#fff; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:6px">
-    <br>
-    <br>
-    <img src="images/6-digit.png" alt="PCSO Ultra Lotto 6-58"style="width:100%;max-width:120px;">
-    <br>
-    <br>
-    <div class="container yf" style="text-align:center; background:#e6e6e6; border-radius:0 0 6px 6px"><h2><strong>6-Digit Lotto</strong></h2>
-    </div>
-    </div></a>
-    </div>
-    </div>
-    <br>
-    </div>
-  </div>
+  <img src="logo.png" alt="Lotto Info Philippines" style="width:100%">
+ <br>
+ </div>
   <div class="side">
   </div>
 </div>
