--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -134,7 +134,20 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
-     <div class="tab blue" style="">
+     <div class="tab blue">
+     <div class="tab blue">
+          <div class="tab blue">
+     <input id="24" type="radio" name="t">
+     <label for="24">November 19, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl"></span><span class="ball text-xl"></span><span class="ball text-xl"></span><span class="ball text-xl"></span><span class="ball text-xl"></span><span class="ball text-xl"></span></p>
+     <h4>Jackpot Prize : &#8369;</h4>
+     <h4>Number of Winners : </h4>
+	     </div>
+     </div>
+     </div>
+	     <div class="tab blue" style="">
      <input id="25" type="radio" name="t">
      <label for="25">November 17, 2017</label>
      <div class="tab-content">
@@ -412,15 +425,6 @@ function closeNav() {
      <div class="tab-content">
      <div class="jackpot">
      <p style="text-align:center"><span class="ball text-xl">52</span><span class="ball text-xl">17</span><span class="ball text-xl">58</span><span class="ball text-xl">9</span><span class="ball text-xl">19</span><span class="ball text-xl">10</span></p>
-     </div>
-     </div>
-     </div>
-     <div class="tab blue">
-     <input id="24" type="radio" name="t">
-     <label for="24">September 10, 2017</label>
-     <div class="tab-content">
-     <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">34</span><span class="ball text-xl">37</span><span class="ball text-xl">39</span><span class="ball text-xl">26</span><span class="ball text-xl">23</span><span class="ball text-xl">10</span></p>
      </div>
      </div>
      </div>
