--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -130,7 +130,7 @@ function openNav() {
 	<h1 class="capital" style="color:#4B77BE"><span itemprop="entry-title"><strong>Results and winnings</strong></span></h1>
 	<img src="images/Results.png" alt="PCSO Lotto Results" class="hide-m hide-l" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
 	<br>
-	<span itemprop="entry-content"><p>Looking for the latest PCSO Lotto results? Ready to discover if you're dreams are about to come true? You're in the right place. Today's jackpot could be yours! So double-check the lottery results to find out how much you've won in today's PCSO lotto draw.</p>
+	<span itemprop="entry-content"><p>Looking for the latest PCSO Lotto results? Ready to discover if your dreams are about to come true? You're in the right place. Today's jackpot could be yours! So double-check the lottery results to find out how much you've won in today's PCSO lotto draw.</p>
 	<a name="58Result"></a><p>These are the official and verified draw results as of <b>today,&nbsp;<script type="text/javascript">document.write(new Date().toDateString());</script></b>.</p></span>
 	<br><br class="hide-s">
 	
