--- a/results-and-winnings/Grand-lotto-6-55-results.html
+++ b/results-and-winnings/Grand-lotto-6-55-results.html
@@ -134,7 +134,18 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
-     <div class="tab blue">
+     <div class="tab blue" style="t">
+     <input id="1c" type="radio" name="t">
+     <label for="1c">November 20, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">15</span><span class="ball text-xl">50</span><span class="ball text-xl">42</span><span class="ball text-xl">35</span><span class="ball text-xl">5</span><span class="ball text-xl">17</span></p>
+     <h4>Jackpot Prize : &#8369;29,700,000</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
+	     <div class="tab blue">
      <input id="29" type="radio" name="t">
      <label for="29">November 18, 2017</label>
      <div class="tab-content">
