--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -65,7 +65,7 @@
  "description": "Learn how to play Grand Lotto 6/55. Everything you need to know about playing Grand Lotto 6/55 is here.",
  "disambiguatingDescription": "How to play Grand lotto 6/55",
  "keywords": ["how to play grand lotto 6/55", "PCSO Lotto", "grand lotto 6/55", "how to play lotto", "play lotto", "lotto 6/55", "grand lotto", "pcso", "lotto"],
- "sameAs": "www.pcso.gov.ph/",
+ "sameAs": "http://www.pcso.gov.ph/games/grandlotto-655/",
  "alternateName": ["pcso grand lotto 6/55 mechanics", "grand lotto mechanics", "grand lotto 6/55 mechanics", "lotto 6/55 mechanics"],
  "contentLocation": "Philippines",
  "locationCreated": "Philippines"
