--- a/pcso-lotto-and-games/EZ-2.html
+++ b/pcso-lotto-and-games/EZ-2.html
@@ -167,6 +167,7 @@ function closeNav() {
 	
 	<a href="Ultra-lotto-6-58.html" class="ff" style="color:#4B77BE; font-size:14px; text-decoration: none; display:inline-block">&#x276e; Ultra Lotto 6/58</a>
 	<a href="Swertres.html" class="ff" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Swertres Lotto &#x276f;</a>
+	<script type="text/javascript"> var infolinks_pid = 3052187; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 	</div>
     
   <div class="side">
