--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,13 @@
  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
  <link rel="manifest" href="manifest.json">
  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8489405167836126",
+    enable_page_level_ads: true
+  });
+</script>
 <style>
 * {box-sizing: border-box;} body {margin:0;} @font-face {font-family:mFont; src: url(Lotto-Info.woff);} body , a {font-family:mFont;} .main p, .side a, .overlay a {font-family:Arial;} .main p{line-height:1.5; letter-spacing:.2px}
 h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p{font-size:18px;} .ftext, .wel{font-size:43px} .text-m{font-size:15px} .text-l {font-size:18px}
