--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -260,7 +260,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">4</span>&nbsp;&nbsp;<span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">5</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
@@ -305,7 +305,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">19</span>&nbsp;&nbsp;<span class="ball text-xl">30</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
