--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -491,5 +491,9 @@ function openNav() {
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color:#EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
 </div>
+	<script type="text/javascript">
+var infolinks_pid = 3052187;
+var infolinks_wsid = 0;
+</script>
 </body>
 </html>
