--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -267,7 +267,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">3</span>&nbsp;&nbsp;<span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">1</span></td>
 	</tr>
 	
 	<!-- SWERTRES 9 PM -->
@@ -312,7 +312,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">19</span>&nbsp;&nbsp;<span class="ball text-xl">24</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
