--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -134,6 +134,17 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     <div class="tab blue">
+     <input id="1a1" type="radio" name="t">
+     <label for="1a1">November 22, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
+     <h4>&#8369;</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
      <div class="tab blue" style="t">
      <input id="1" type="radio" name="t">
      <label for="1">November 20, 2017</label>
@@ -394,15 +405,6 @@ function closeNav() {
      <div class="tab-content">
      <div class="jackpot">
      <p style="text-align:center"><span class="ball text-xl">26</span><span class="ball text-xl">44</span><span class="ball text-xl">28</span><span class="ball text-xl">6</span><span class="ball text-xl">23</span><span class="ball text-xl">37</span></p>
-     </div>
-     </div>
-     </div>
-     <div class="tab blue">
-     <input id="29" type="radio" name="t">
-     <label for="29">September 13, 2017</label>
-     <div class="tab-content">
-     <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">32</span><span class="ball text-xl">5</span><span class="ball text-xl">43</span><span class="ball text-xl">18</span><span class="ball text-xl">4</span><span class="ball text-xl">28</span></p>
      </div>
      </div>
      </div>
