--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -11,7 +11,9 @@
 <meta name="news_keywords" content="ultra lotto result, grand lotto result, super lotto result, mega lotto result, lotto draw result, PCSO, Philippines" />
 <link rel="original-source" href="https://lottoinfo.ph/results-and-winnings" />
 <link rel="canonical" href="https://lottoinfo.ph/results-and-winnings" /> 
-<meta property="og:title" content="PCSO LOTTO RESULTS - Official and Verified PCSO Lotto Results" /> 
+<meta property="fb:admins" content="659407145" />
+<meta property="fb:app_id" content="129650183806730" />
+	<meta property="og:title" content="PCSO LOTTO RESULTS - Official and Verified PCSO Lotto Results" /> 
 <meta property="og:type" content="article" /> 
 <meta property="og:locale" content="en_US" />
 <meta property="og:locale:alternate" content="tl_PH" />
