--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en_US" prefix="og: http://ogp.me/ns/article#">
+<html lang="en_US" xmlns:fb="http://ogp.me/ns/fb#" prefix="og: http://ogp.me/ns/article#">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<title>PCSO LOTTO RESULTS - Official and Verified PCSO Lotto Results</title>
+<title>PCSO Lotto Results November 2017- Official and Verified PCSO Lotto Results</title>
 <meta name="theme-color" content="#2d89ef">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Looking for the latest PCSO Lotto results? Ready to discover if your dreams are about to come true? You're in the right place. Click here to see the result of you favorite lotto game." /> 
@@ -13,7 +13,7 @@
 <link rel="canonical" href="https://lottoinfo.ph/results-and-winnings" /> 
 <meta property="fb:admins" content="659407145" />
 <meta property="fb:app_id" content="129650183806730" />
-	<meta property="og:title" content="PCSO LOTTO RESULTS - Official and Verified PCSO Lotto Results" /> 
+	<meta property="og:title" content="PCSO Lotto Rsults November 2017- Official and Verified PCSO Lotto Results" /> 
 <meta property="og:type" content="article" /> 
 <meta property="og:locale" content="en_US" />
 <meta property="og:locale:alternate" content="tl_PH" />
