--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -156,7 +156,7 @@ function closeNav() {
      </tr>
      <tr>
      <td class="yf"><b>4 PM</b></td>
-     <td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+     <td><span class="ball text-xl">18</span>&nbsp;&nbsp;<span class="ball text-xl">14</span></td>
      </tr>
      <tr>
      <td class="yf"><b>9 PM</b></td>
