--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -81,6 +81,14 @@
   "locationCreated": "Philippines"
 }
 </script>
+	<script async src="//pagead2.googlesyndication.com/
+pagead/js/adsbygoogle.js"></script>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({
+google_ad_client: "ca-pub-8489405167836126",
+enable_page_level_ads: true
+});
+</script>
 <style>
 * {box-sizing: border-box;} body {margin:0;} ul a {color:#2d89ef;} .side a {font-family:Arial} .footer a {color:#EEEEEE; font-size:13px; text-decoration:none}
 @font-face {font-family:mFont; src: url(Lotto-Info.woff);} body, a {font-family:mFont;} .capital {text-transform:uppercase} h1{font-size:28px} h2{font-size:24px} h3{font-size:22px} h4{font-size:20px}
