--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -89,6 +89,12 @@ google_ad_client: "ca-pub-8489405167836126",
 enable_page_level_ads: true
 });
 </script>
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+ <link rel="icon" href="https://lottoinfo.ph/favicon.ico"/>
+ <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+ <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+ <link rel="manifest" href="manifest.json">
+ <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 <style>
 * {box-sizing: border-box;} body {margin:0;} ul a {color:#2d89ef;} .side a {font-family:Arial} .footer a {color:#EEEEEE; font-size:13px; text-decoration:none}
 @font-face {font-family:mFont; src: url(Lotto-Info.woff);} body, a {font-family:mFont;} .capital {text-transform:uppercase} h1{font-size:28px} h2{font-size:24px} h3{font-size:22px} h4{font-size:20px}
