--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -238,10 +238,10 @@ function closeNav() {
  "@context": "http://schema.org",
  "@type": "WebSite",
  "name": "Lotto Info Philippines",
- "url": "http://lottoinfo.ph/",
+ "url": "https://lottoinfo.ph/",
  "potentialAction": {
  "@type": "SearchAction",
- "target": "http://lottoinfo.ph/?s={search_term_string}",
+ "target": "https://lottoinfo.ph/?s={search_term_string}",
  "query-input": "required name=search_term_string"
  }
  }</script><script type=application/ld+json>{
@@ -263,26 +263,26 @@ function closeNav() {
  "@type": "ListItem",
  "position": 1,
  "item": {
- "@id": "http://lottoinfo.ph/PCSO-lotto-and-games",
+ "@id": "https://lottoinfo.ph/PCSO-lotto-and-games",
  "name": "PCSO Lotto and Games",
  "image": [
- "http://lottoinfo.ph/images/6-58.png",
- "http://lottoinfo.ph/images/6-55.png",
- "http://lottoinfo.ph/images/6-49.png",
- "http://lottoinfo.ph/images/6-45.png",
- "http://lottoinfo.ph/images/6-42.png",
- "http://lottoinfo.ph/images/pcsoswertres.png",
- "http://lottoinfo.ph/images/ez2-lotto.png",
- "http://lottoinfo.ph/images/4digit.png",
- "http://lottoinfo.ph/images/6-Digit.png"]
+ "https://lottoinfo.ph/images/6-58.png",
+ "https://lottoinfo.ph/images/6-55.png",
+ "https://lottoinfo.ph/images/6-49.png",
+ "https://lottoinfo.ph/images/6-45.png",
+ "https://lottoinfo.ph/images/6-42.png",
+ "https://lottoinfo.ph/images/pcsoswertres.png",
+ "https://lottoinfo.ph/images/ez2-lotto.png",
+ "https://lottoinfo.ph/images/4digit.png",
+ "https://lottoinfo.ph/images/6-Digit.png"]
  }
  },{
  "@type": "ListItem",
  "position": 2,
  "item": {
- "@id": "http://lottoinfo.ph/PCSO-lotto-and-games/Grand-lotto-6-55",
+ "@id": "https://lottoinfo.ph/PCSO-lotto-and-games/Grand-lotto-6-55",
  "name": "Grand Lotto 6/55",
- "image": "http://lottoinfo.ph/images/6-55-how.png"
+ "image": "https://lottoinfo.ph/images/6-55-how.png"
  }
  }]
  }</script><script type=application/ld+json>{
@@ -291,8 +291,8 @@ function closeNav() {
  "name": "",
  "target": {
  "@type": "EntryPoint",
- "url": "http://lottoinfo.ph/pcso-lotto-and-games/Grand-lotto-6-55.html",
- "urlTemplate": "http://lottoinfo.ph/pcso-lotto-and-games/Grand-lotto-6-55.html"
+ "url": "https://lottoinfo.ph/pcso-lotto-and-games/Grand-lotto-6-55.html",
+ "urlTemplate": "https://lottoinfo.ph/pcso-lotto-and-games/Grand-lotto-6-55.html"
  }
  }</script>
 
@@ -351,11 +351,6 @@ function closeNav() {
 
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:16px"><b>&copy; Lotto Info Philippines</b></h4>
-</div>
-	<script type="text/javascript">
-var infolinks_pid = 3052187;
-var infolinks_wsid = 0;
-</script>
-<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+</div>	
 </body>
 </html>
