--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -134,6 +134,17 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     <div class="tab blue">
+     <input id="2ac" type="radio" name="t">
+     <label for="2ac">November 23, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
+     <h4>&#8369;</h4>
+     <h4>Number of Winners : ?</h4>
+     </div>
+     </div>
+     </div>
      <div class="tab blue" style="t">
      <input id="1" type="radio" name="t">
      <label for="1">November 21, 2017</label>
@@ -394,15 +405,6 @@ function closeNav() {
      <div class="tab-content">
      <div class="jackpot">
      <p style="text-align:center"><span class="ball text-xl">38</span><span class="ball text-xl">27</span><span class="ball text-xl">5</span><span class="ball text-xl">22</span><span class="ball text-xl">1</span><span class="ball text-xl">34</span></p>
-     </div>
-     </div>
-     </div>
-     <div class="tab blue">
-     <input id="29" type="radio" name="t">
-     <label for="29">September 14, 2017</label>
-     <div class="tab-content">
-     <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">12</span><span class="ball text-xl">20</span><span class="ball text-xl">11</span><span class="ball text-xl">16</span><span class="ball text-xl">38</span><span class="ball text-xl">31</span></p>
      </div>
      </div>
      </div>
