--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -139,9 +139,9 @@ function closeNav() {
      <label for="2ac">November 23, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>&#8369;</h4>
-     <h4>Number of Winners : </h4>
+     <p style="text-align:center"><span class="ball text-xl">4</span><span class="ball text-xl">28</span><span class="ball text-xl">9</span><span class="ball text-xl">11</span><span class="ball text-xl">17</span><span class="ball text-xl">13</span></p>
+     <h4>&#8369;31,846,067</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
