--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -139,9 +139,9 @@ function closeNav() {
      <label for="2ac">November 23, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>&#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">34</span><span class="ball text-xl">24</span><span class="ball text-xl">40</span><span class="ball text-xl">1</span><span class="ball text-xl">16</span><span class="ball text-xl">28</span></p>
+     <h4>&#8369;12,075,058</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
