--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -75,7 +75,7 @@ h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} .fr p, h4{font-size:20p
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}}
 @media (max-width: 600px){h1 {font-size:20px} h2{font-size:20px} h3{font-size:20px} h4{font-size:17px} .fr p{font-size:17px}} .m{margin-left:6px;}
 .ball { background:#F7DC6F; border-radius: 0.9em; -moz-border-radius: 0.9em; -webkit-border-radius: 0.9em; display: inline-block; font-weight:bold; color:#3a3a3a!important; line-height: 1.8em; margin-right: 8px; text-align: center; width: 1.8em; box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.11);}
-.sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} .tab {position:relative; margin-bottom:1px; width:100%; overflow:hidden;} input { position:absolute; opacity:0; z-index:-1;} label { position:relative; color:#404040; display:block; padding: 0 0 0 1em; border:1px solid #ccc; font-weight:bold; line-height:3; cursor:pointer;}
+.sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} .tab {position:relative; margin-bottom:1px; width:100%; overflow:hidden;} input { position:absolute; opacity:0; z-index:-1;} label { position:relative; color:#404040; display:block; padding: 0 0 0 1em; border-radius:6px; border:1px solid #ccc; font-weight:bold; line-height:3; cursor:pointer;}
 .tab-content { max-height:0; overflow:hidden; background:#f2f2f2; -webkit-transition: max-height .35s; -o-transition: max-height .35s; transition: max-height .35s;}
 .tab-content p {margin: 1em;} input:checked ~ .tab-content {max-height: 12em;} label::after {position: absolute; right: 0; top: 0; display: block; width: 3em; height: 3em; line-height: 3; text-align: center; -webkit-transition: all .35s; -o-transition: all .35s; transition: all .35s;}
 input[type=radio] + label::after {content: "\25BC";} input[type=radio]:checked + label::after {transform: rotateX(180deg);} .footer a {color:#EEEEEE; font-size:13px; text-decoration:none} .jackpot {width:100%; padding:18px 8px; text-align:center;}
@@ -97,7 +97,7 @@ input[type=radio] + label::after {content: "\25BC";} input[type=radio]:checked +
 </div>
 
 <div class="topnav" style="background:#ffffff; z-index:1; width:100%; overflow:hidden; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)">
-  <a href="index.html" class="hide-m hide-l" style="font-size:20px; color:#626567; margin-left:5px;"><b>Lotto Info Philippines</b></a>
+  <a href="../index.html" class="hide-m hide-l" style="font-size:20px; color:#626567; margin-left:5px;"><b>Lotto Info Philippines</b></a>
   <a href="javascript:void(0)" class="hide-l hide-m" style="font-size:22px; margin-right:10px; color:#626567; text-decoration:none; float:right;" onclick="openNav()">&#9776;</a>
 </div>
 
@@ -437,9 +437,6 @@ function closeNav() {
      </div>
      </div>
      </div>
-     <br>
-     <a href="#" style="color:#4B77BE; font-size:14px; text-decoration: none; display:inline-block">&#x276e; Mega Lotto 6/45</a>
-     <a href="#" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Grand Lotto 6/55 &#x276f;</a>
      <br>
      </div>
      </div>
