--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -281,7 +281,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
@@ -326,7 +326,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">10</span>&nbsp;&nbsp;<span class="ball text-xl">18</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
