--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -60,7 +60,7 @@
 }</script>
  
  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
- <link rel="icon" href="http://lottoinfo.ph/favicon.ico"/>
+ <link rel="icon" href="https://lottoinfo.ph/favicon.ico"/>
  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
  <link rel="manifest" href="../manifest.json">
@@ -134,6 +134,17 @@ function closeNav() {
     <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     <div class="tab blue">
+     <input id="23ac" type="radio" name="t">
+     <label for="23ac">November 24, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
+     <h4>&#8369;</h4>
+     <h4>Number of Winners : </h4>
+     </div>
+     </div>
+     </div>
 	     <div class="tab blue">
      <input id="az" type="radio" name="t">
      <label for="az">November 21, 2017</label>
