--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -161,13 +161,13 @@ function openNav() {
 	<div class="half" style="text-align:center">
 	<img src="images/6-58.png" alt="Ultra lotto 6/58 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Ultra lotto 6/58 result</strong></span></h2>
-	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4><span class="ball">45</span><span class="ball">8</span><span class="ball">33</span><span class="ball">12</span><span class="ball">17</span><span class="ball">58</span></h4>
     <h4 class="yf"><span itemprop="entry-content"><b>November 24, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Jackpot Prize : &#8369;100,801,652</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="55Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Ultra-lotto-6-58-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -224,13 +224,13 @@ function openNav() {
 	<br>
 	<img src="images/6-45.png" alt="Mega Lotto 6/45 results" style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Mega lotto 6/45 result</strong></span></h2>
-	<h4 ><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 ><span class="ball">32</span><span class="ball">35</span><span class="ball">45</span><span class="ball">14</span><span class="ball">31</span><span class="ball">11</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>November 24, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Jackpot Prize : &#8369;46,511,784</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="42Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Mega-lotto-6-45-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -295,7 +295,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">3</span>&nbsp;&nbsp;<span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">7</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -340,7 +340,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">10</span>&nbsp;&nbsp;<span class="ball text-xl">30</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
