--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -139,9 +139,9 @@ function closeNav() {
      <label for="23ac">November 24, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>&#8369;</h4>
-     <h4>Number of Winners : </h4>
+     <p style="text-align:center"><span class="ball text-xl">45</span><span class="ball text-xl">8</span><span class="ball text-xl">33</span><span class="ball text-xl">12</span><span class="ball text-xl">17</span><span class="ball text-xl">58</span></p>
+     <h4>&#8369;100,801,652</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
