--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -139,8 +139,8 @@ function closeNav() {
      <label for="23ac">November 24, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>&#8369;</h4>
+     <p style="text-align:center"><span class="ball text-xl">32</span><span class="ball text-xl">35</span><span class="ball text-xl">45</span><span class="ball text-xl">14</span><span class="ball text-xl">31</span><span class="ball text-xl">11</span></p>
+     <h4>&#8369;46,511,784</h4>
      <h4>Number of Winners : </h4>
      </div>
      </div>
