--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -152,7 +152,7 @@ function closeNav() {
 </thead>
 <tr>
 <td class="yf"><b>11 AM</b></td>
-<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+<td><span class="ball text-xl">26</span>&nbsp;&nbsp;<span class="ball text-xl">25</span></td>
 </tr>
 <tr>
 <td class="yf"><b>4 PM</b></td>
