--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -139,9 +139,9 @@ function closeNav() {
      <label for="31ac">November 25, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : </h4>
+     <p style="text-align:center"><span class="ball text-xl">1</span><span class="ball text-xl">11</span><span class="ball text-xl">35</span><span class="ball text-xl">22</span><span class="ball text-xl">29</span><span class="ball text-xl">7</span></p>
+     <h4>Jackpot Prize : &#8369;14,992,766</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
