--- a/Index.html
+++ b/Index.html
@@ -258,14 +258,12 @@ function closeNav() {
  }</script><script type=application/ld+json>{
  "@context": "http://schema.org",
  "@type": "Organization",
+ "url": "https://lottoinfo.ph",
+  "logo": "https://lottoinfo.ph/logo.png"
  "address": {
  "@type": "PostalAddress",
  "addressCountry": "Philippines"},
  "email": "inquire(at)lottoinfo.ph",
- "member": 
- {
- "@type": "Organization"
- },
  "name": "Lotto Info Philippines"
  }</script><script type=application/ld+json>{
  "@context": "http://schema.org",
