--- a/Index.html
+++ b/Index.html
@@ -259,7 +259,7 @@ function closeNav() {
  "@context": "http://schema.org",
  "@type": "Organization",
  "url": "https://lottoinfo.ph",
-  "logo": "https://lottoinfo.ph/logo.png"
+  "logo": "https://lottoinfo.ph/logo.png",
  "address": {
  "@type": "PostalAddress",
  "addressCountry": "Philippines"},
@@ -271,7 +271,7 @@ function closeNav() {
  "name": "",
  "target": {
  "@type": "EntryPoint",
- "url": "https://lottoinfo.ph"
+ "url": "https://lottoinfo.ph",
  "urlTemplate": "https://lottoinfo.ph"
  }
  }</script>
