--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -148,8 +148,8 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue" style="t">
-<input id="1" type="radio" name="t">
-<label for="1">November 27, 2017</label>
+<input id="nov27" type="radio" name="t">
+<label for="nov27">November 27, 2017</label>
 <div class="tab-content">
 <table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
 <thead>
