--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -125,7 +125,7 @@ function closeNav() {
      
      <tr>
      <td class="yf"><b>4 PM</b></td>
-     <td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+     <td><span class="ball text-xl">7</span>&nbsp;&nbsp;<span class="ball text-xl">4</span>&nbsp;&nbsp;<span class="ball text-xl">4</span></td>
      </tr>
      
      <!-- SWERTRES 9PM -->
