--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -554,5 +554,10 @@ function closeNav() {
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
 </div>
+	<script type="text/javascript">
+var infolinks_pid = 3052187;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
