--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -79,9 +79,9 @@
 h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} .fr p, h4{font-size:20px} p{font-size:17px;}
 @media (max-width:600px){.hide-s{display:none!important}} @media (max-width:992px) and (min-width:601px){.hide-m{display:none!important}} @media (min-width:993px){.hide-l{display:none!important}}
 .topnav a {float:left; display:block; color:#ECEEF1; padding:11px; text-decoration:none; vertical-align:middle;} .yf, p, .fr h4 {color:#4d4d4d;} .hov:hover {border-bottom:3px solid white;} .hide{display:none!important;}
-.topnav {overflow:hidden; background-color:#F2f2f2;} .side {float:left; width:100%; padding:16px;} .main { padding: 16px; float:left; width:100%}
+.topnav {overflow:hidden; background-color:#F2f2f2;} .side {float:left; width:100%; padding:16px;} .main { padding: 30px; float:left; width:100%}
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}}
-@media (max-width: 600px){h1 {font-size:20px} h2{font-size:20px} h3{font-size:20px} h4{font-size:17px} .fr p{font-size:17px}} .m{margin-left:6px;}
+@media (max-width: 600px){h1 {font-size:20px} h2{font-size:20px} h3{font-size:20px} h4{font-size:17px} .fr p{font-size:17px} .main{padding:16px; width:100%}} .m{margin-left:6px;}
 .ball { background:#F7DC6F; border-radius: 0.9em; -moz-border-radius: 0.9em; -webkit-border-radius: 0.9em; display: inline-block; font-weight:bold; color:#3a3a3a!important; line-height: 1.8em; margin-right: 8px; text-align: center; width: 1.8em; box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.11);}
 .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} .tab {position:relative; margin-bottom:1px; width:100%; overflow:hidden;} input { position:absolute; opacity:0; z-index:-1;} label { position:relative; color:#404040; display:block; padding: 0 0 0 1em; border-radius:6px; border:1px solid #ccc; font-weight:bold; line-height:3; cursor:pointer;}
 .tab-content { max-height:0; overflow:hidden; background:#f2f2f2; -webkit-transition: max-height .35s; -o-transition: max-height .35s; transition: max-height .35s;}
@@ -593,7 +593,8 @@ function closeNav() {
 
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
-</div>
+</div>	
+	
 	<script type="text/javascript">
 var infolinks_pid = 3052187;
 var infolinks_wsid = 0;
