--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Nov27">November 27, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">25</span><span class="ball text-xl">43</span><span class="ball text-xl">22</span><span class="ball text-xl">37</span><span class="ball text-xl">24</span><span class="ball text-xl">15</span></p>
+     <h4>Jackpot Prize : &#8369;50,756,683</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
