--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -132,7 +132,7 @@ function closeNav() {
      
      <tr>
      <td class="yf"><b>9 PM</b></td>
-     <td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+     <td><span class="ball text-xl">4</span>&nbsp;&nbsp;<span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">5</span></td>
      </tr>
      </table>
      
