--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -356,7 +356,7 @@ function openNav() {
 	<br>
 	<img src="images/4-Digit.png" alt="PCSO 4-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>4-Digit Game result</strong></span></h2>
-	<h4><span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span></h4>
+	<h4><span class="ball">4</span>&nbsp;<span class="ball">3</span>&nbsp;<span class="ball">4</span>&nbsp;<span class="ball">1</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>November 27, 2017</b></span></h4>
 	</div>
 	<div class="half">
