--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -144,9 +144,34 @@ function closeNav() {
     <img src="../images/EZ-2-result.png" alt="PCSO EZ 2 Lotto Result" class="hide-m hide-l" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
     <br>
     <p class="ar">These are the latest and previous PCSO EZ 2 Lotto draw results and winnings.</p>
-    <p class="ar">The numbers of winners and prize amounts posted here are the actual numbers of winners and prize amount.</p> 
      
      <div class="row fr">
+	     <div class="tab blue" style="t">
+<input id="nov28" type="radio" name="t">
+<label for="nov28">November 28, 2017</label>
+<div class="tab-content">
+<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
+<thead>
+<tr>
+<th>TIME OF DRAW</th>
+<th>RESULT</th>
+</tr>
+</thead>
+<tr>
+<td class="yf"><b>11 AM</b></td>
+<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+</tr>
+<tr>
+<td class="yf"><b>4 PM</b></td>
+<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+</tr>
+<tr>
+<td class="yf"><b>9 PM</b></td>
+<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+</tr>
+</table>
+</div>
+</div>
 	     <div class="tab blue" style="t">
 <input id="nov27" type="radio" name="t">
 <label for="nov27">November 27, 2017</label>
