--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -118,7 +118,7 @@ function closeNav() {
      
      <tr>
      <td class="yf"><b>11 AM</b></td>
-     <td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+     <td><span class="ball text-xl">4</span>&nbsp;&nbsp;<span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">5</span></td>
      </tr>
      
      <!-- SWERTRES 4PM -->
