--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Nov28">November 28, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">12</span><span class="ball text-xl">42</span><span class="ball text-xl">9</span><span class="ball text-xl">52</span><span class="ball text-xl">55</span><span class="ball text-xl">6</span></p>
+     <h4>Jackpot Prize : &#8369;108,398,216</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
