--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Nov28">November 28, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">45</span><span class="ball text-xl">24</span><span class="ball text-xl">1</span><span class="ball text-xl">14</span><span class="ball text-xl">38</span><span class="ball text-xl">30</span></p>
+     <h4>Jackpot Prize : &#8369;37,919,214</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
