--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Nov28">November 28, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">1</span><span class="ball text-xl">16</span><span class="ball text-xl">28</span><span class="ball text-xl">39</span><span class="ball text-xl">17</span><span class="ball text-xl">7</span></p>
+     <h4>Jackpot Prize : &#8369;17,517,706</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
