--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -288,7 +288,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">3</span>&nbsp;&nbsp;<span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">7</span></td>
 	</tr>
 	
 	<!-- SWERTRES 9 PM -->
