--- a/pcso-lotto-and-games/lotto-6-42.html
+++ b/pcso-lotto-and-games/lotto-6-42.html
@@ -155,6 +155,16 @@ function closeNav() {
     <br>
     <p>PCSO Lotto 6/42 is the oldest lottery game offered by the Philippine Charity Sweepstakes Office (PCSO), In this game, you are given the chance to win a jackpot prize which starts at ₱6 million. PCSO Lotto 6/42 begin on March 8, 1995, it was initially played only in Luzon and drawn every tuesday of the week, each standard combination costs ₱10.</p>
     <p>Due to insisting public demand, on June 1996 the Lotto 6/42 game was also introduced in the Visayas and Mindanao area. Now played thrice a week. Every tuesdays, thursdays and sundays. Each standard six number combination costs ₱20.</p>
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <h1 style="color:#4B77BE"><strong>How to play PCSO Lotto 6/42?</strong></h1>
     <p>It is simple to play PCSO Lotto 6/42. Look for an authorized PCSO lotto outlet and get a PCSO Lotto 6/42 playslip and mark 6 numbers you want (numbers from 1 to 42) or try the Lucky Pick, it generates random numbers to make it easier. Then submit your playslip to the outlet operator and wait for the ticket. Keep your ticket on a safe place so that you have proof in claiming your winnings. You will pay ₱20 for every standard six number combination play.</p>
     <ul>
@@ -214,7 +224,16 @@ function closeNav() {
     <p>All you need to win the PCSO Lotto 6/42 jackpot is match correctly all six of the winning numbers in any order. You don't have to win the jackpot to get prizes. You could win a prize by matching atleast 3 out of the six winning numbers drawn.</p>
     <h3 style="color:#4B77BE"><strong>How much can I win?</strong></h3>
     <p>If you are the lucky one who matched the six winning number combination, the minimum jackpot prize for you is ₱6 Million. But if not, it doesn't mean you cannot have any prize. If you got 5 out of the 6 winning numbers drawn you can win up to ₱25,000. Up to ₱1,000 if you got 4. And ₱20 if you got 3 called  <i>balik taya</i>. Take a look at the prize breakdown table of each draw to see what you’ve won.</p>
-        
+       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script> 
     <h3 style="color:#4B77BE"><strong>What if there are more than one jackpot winner?</strong></h3>
     <p>PCSO Lotto 6/42 is a pari-mutuel game. Meaning if there are more than one jackpot prize winner, the prize money will be divided equally among the winners.</p>
     <p>If no one got the jackpot, said jackpot prize shall be added to the computation of jackpot prize of the next scheduled draw.</p>
@@ -353,11 +372,6 @@ function closeNav() {
 
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:16px"><b>&copy; Lotto Info Philippines</b></h4>
-</div>	
-	<script type="text/javascript">
-var infolinks_pid = 3052187;
-var infolinks_wsid = 0;
-</script>
-<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+</div>		
 </body>
 </html>
