--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -232,7 +232,7 @@ function closeNav() {
 	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Side big -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
+     style="display:inline-block;width:250px;height:600px"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9705447986"></ins>
 <script>
@@ -356,14 +356,18 @@ function closeNav() {
  <p><a href="">Contact Us</a></p>
 </div>
 </div>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
-</div>	
-	<script type="text/javascript">
-var infolinks_pid = 3052187;
-var infolinks_wsid = 0;
-</script>
-<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+</div>		
 </body>
 </html>
