--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -179,6 +179,16 @@ function closeNav() {
     </ul>
     <p>The cut-off time for playing Ultra Lotto 6/58 is 8:00 p.m.</p>
     <p>To play this game, you must be 18 years old or above.</p>
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <h3 style="color:#4B77BE"><strong>How much does it cost?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
     <table style="border-collapse: collapse; width:100%; max-width:500px; text-align:left;">
     <tr>
@@ -242,7 +252,7 @@ function closeNav() {
 	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Side big -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:250px;height:600px"
+     style="display:inline-block;width:100%;max-width:300px;height:600px"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9705447986"></ins>
 <script>
