--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -143,8 +143,8 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue" style="t">
-	<input id="nov30" type="radio" name="t">
-	<label for="nov30">November 30, 2017</label>
+	<input id="dec1" type="radio" name="t">
+	<label for="dec1">November 30, 2017</label>
 	<div class="tab-content">
 	<h3 class="ar">Swertres Result November 30, 2017</h3>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
